--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -15,11 +15,13 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@project/libs/config/user": ["libs/config/user/src/index.ts"],
       "@project/libs/core": ["libs/core/src/index.ts"],
       "@project/libs/helpers": ["libs/helpers/src/index.ts"],
       "@project/libs/types": ["libs/types/src/index.ts"]
     },
-    "strict": true
+    "strict": true,
+    "strictPropertyInitialization": false,
   },
   "exclude": ["node_modules", "tmp"]
 }
