--- a/project/package.json
+++ b/project/package.json
@@ -12,6 +12,7 @@
     "@nestjs/mongoose": "10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.17",
+    "@prisma/client": "^5.8.1",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -19,6 +20,7 @@
     "dayjs": "^1.11.10",
     "joi": "17.11.0",
     "mongoose": "8.0.4",
+    "prisma": "^5.8.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0"
