--- a/project/tsconfig.base.json
+++ b/project/tsconfig.base.json
@@ -16,6 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@project/libs/blog/models": ["libs/blog/models/src/index.ts"],
+      "@project/libs/config/file-storage": [
+        "libs/config/file-storage/src/index.ts"
+      ],
       "@project/libs/config/user": ["libs/config/user/src/index.ts"],
       "@project/libs/core": ["libs/core/src/index.ts"],
       "@project/libs/helpers": ["libs/helpers/src/index.ts"],
