--- a/project/package.json
+++ b/project/package.json
@@ -5,6 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^4.1.0",
+    "@nestjs-modules/mailer": "^1.10.3",
     "@nestjs/common": "^10.0.2",
     "@nestjs/config": "3.1.1",
     "@nestjs/core": "^10.0.2",
@@ -22,6 +24,7 @@
     "class-validator": "^0.14.0",
     "dayjs": "^1.11.10",
     "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "joi": "17.11.0",
     "mime-types": "^2.1.35",
     "mongoose": "8.0.4",
@@ -52,6 +55,7 @@
     "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.11",
     "@types/node": "~18.7.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
